--- a/hyperlinks.html
+++ b/hyperlinks.html
@@ -23,10 +23,10 @@
         <li><a class="nav-link" href="transform.html"><span>Трансформація</span></a></li>
         <li><a class="nav-link" href="animations.html"><span>Анімація (2D, 3D)</span></a></li>
         <li><a class="nav-link" href="flexbox.html"><span>Flex-box</span></a></li>
-        <li><a class="nav-link" href="#"><span>Display</span></a></li>
-        <li><a class="nav-link" href="#"><span>Префікси</span></a></li>
-        <li><a class="nav-link" href="#"><span>SVG</span></a></li>
-        <li><a class="nav-link" href="#"><span>Спрайти</span></a></li>
+        <!--<li><a class="nav-link" href="#"><span>Display</span></a></li>-->
+        <!--<li><a class="nav-link" href="#"><span>Префікси</span></a></li>-->
+        <!--<li><a class="nav-link" href="#"><span>SVG</span></a></li>-->
+        <!--<li><a class="nav-link" href="#"><span>Спрайти</span></a></li>-->
       </ol>
     </div>
   </nav>
@@ -87,7 +87,7 @@
           </table>
           <p>По номеру телефона:<a href="tel:+38055555555"><span class="spanOrange">&lta href="tel:+38055555555"&gt</span>+380-55-555-55-55<span class="spanOrange">&lt/a&gt</span></a></p>
           <p>Скайп:<a href="skype:sviatoslav.pr"><span class="spanOrange">&lta href="skype:sviatoslav.pr"&gt</span>Skype: sviatoslav.pr<span class="spanOrange">&lt/a&gt</span></a></p>
-          <p><a href="../img/image.jpg" title="Download" download=""><img src="./img/image.jpg" width="100px" style="vertical-align: middle; margin-right: 15px;"></a>                    &lta href="image.jpg" title="Download"<span class="spanOrange">download</span>&gt&ltimg
+          <p><a href="./img/image.jpg" title="Download" download=""><img src="./img/image.jpg" width="100px" style="vertical-align: middle; margin-right: 15px;"></a>                    &lta href="image.jpg" title="Download"<span class="spanOrange">download</span>&gt&ltimg
                                 src="image.jpg" width="100px" height="50px"&gt&lt/a&gt
           </p>
           <div style="display: flex; align-items: center;">
