--- a/html/html/a.html
+++ b/html/html/a.html
@@ -110,14 +110,14 @@
                     Скайп: <a href="skype:sviatoslav.pr"><span class="spanOrange">&lt;a href="skype:sviatoslav.pr"&gt;</span>Skype: sviatoslav.pr<span class="spanOrange">&lt;/a&gt;</span></a>
                 </p>
                 <p>
-                    <a href="../img/image.jpg" title="Download" download><img src="../img/image.jpg" width="100px"
+                    <a href="../../img/image.jpg" title="Download" download><img src="../../img/image.jpg" width="100px"
                                                                               style="vertical-align: middle; margin-right: 15px;" /></a>
                     &lt;a href="image.jpg" title="Download" <span class="spanOrange">download</span>&gt;&lt;img
                     src="image.jpg" width="100px" height="50px"/&gt;&lt;/a&gt;
                 </p>
                 <div style="display: flex; align-items: center">
                     <div style="margin-right: 25px;">
-                        <img style="border: none;" src="../img/minions.jpg" width="400" height="auto" alt="minions"
+                        <img style="border: none;" src="../../img/minions.jpg" width="400" height="auto" alt="minions"
                              usemap="#minions">
                         <map name="minions">
                             <area shape="poly"
